%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQanimation
  serializedVersion: 2
  m_AnimatorParameters:
  - m_Name: is_straight
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: is_left
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: is_right
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: is_get
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: is_return_back
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: is_win
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: is_lose
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: is_idle
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: is_change_turn
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 110724626}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1101 &110106380
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110210760}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_get
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110109882
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110239848}
  m_DstState: {fileID: 110230258}
  m_TransitionDuration: .249999762
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_left
    m_EventTreshold: 0
    m_ExitTime: .750000238
  - m_ConditionMode: 2
    m_ConditionEvent: is_change_turn
    m_EventTreshold: 0
    m_ExitTime: .750000238
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110114124
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110230258}
  m_DstState: {fileID: 110295718}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_straight
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 2
    m_ConditionEvent: is_change_turn
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110118080
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110295718}
  m_DstState: {fileID: 110251152}
  m_TransitionDuration: .308222681
  m_TransitionOffset: .985647678
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: is_straight
    m_EventTreshold: 0
    m_ExitTime: 4.28627491
  - m_ConditionMode: 1
    m_ConditionEvent: is_idle
    m_EventTreshold: 0
    m_ExitTime: 4.28627491
  - m_ConditionMode: 2
    m_ConditionEvent: is_change_turn
    m_EventTreshold: 0
    m_ExitTime: 4.28627491
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110119916
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110295554}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_win
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110132550
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245170}
  m_DstState: {fileID: 110295718}
  m_TransitionDuration: .124999881
  m_TransitionOffset: .285687774
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: is_idle
    m_EventTreshold: 0
    m_ExitTime: 1.01784396
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110133794
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110295554}
  m_DstState: {fileID: 110295718}
  m_TransitionDuration: .187499985
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .8125
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110136466
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110251152}
  m_DstState: {fileID: 110230258}
  m_TransitionDuration: .189873293
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_left
    m_EventTreshold: 0
    m_ExitTime: .810126722
  - m_ConditionMode: 2
    m_ConditionEvent: is_change_turn
    m_EventTreshold: 0
    m_ExitTime: .810126722
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110137576
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110295718}
  m_DstState: {fileID: 110230258}
  m_TransitionDuration: .249999762
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_left
    m_EventTreshold: 0
    m_ExitTime: .750000238
  - m_ConditionMode: 2
    m_ConditionEvent: is_change_turn
    m_EventTreshold: 0
    m_ExitTime: .750000238
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110142448
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110210760}
  m_DstState: {fileID: 110295718}
  m_TransitionDuration: .249999881
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: is_idle
    m_EventTreshold: 0
    m_ExitTime: .750000119
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110144416
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110245170}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_return_back
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110144842
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110265300}
  m_DstState: {fileID: 110295718}
  m_TransitionDuration: .200000003
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: 
    m_EventTreshold: 0
    m_ExitTime: .981646836
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110144916
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110239848}
  m_DstState: {fileID: 110295718}
  m_TransitionDuration: .249999762
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_straight
    m_EventTreshold: 0
    m_ExitTime: .750000238
  - m_ConditionMode: 2
    m_ConditionEvent: is_change_turn
    m_EventTreshold: 0
    m_ExitTime: .750000238
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110156168
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110251152}
  m_DstState: {fileID: 110295718}
  m_TransitionDuration: .474812984
  m_TransitionOffset: .749378383
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_straight
    m_EventTreshold: 0
    m_ExitTime: 3.86999989
  - m_ConditionMode: 2
    m_ConditionEvent: is_change_turn
    m_EventTreshold: 0
    m_ExitTime: 3.86999989
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110158562
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110265300}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_change_turn
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110167360
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110230258}
  m_DstState: {fileID: 110239848}
  m_TransitionDuration: .25
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_right
    m_EventTreshold: 0
    m_ExitTime: .75
  - m_ConditionMode: 2
    m_ConditionEvent: is_change_turn
    m_EventTreshold: 0
    m_ExitTime: .75
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110169876
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110295718}
  m_DstState: {fileID: 110239848}
  m_TransitionDuration: .249999762
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_right
    m_EventTreshold: 0
    m_ExitTime: .750000238
  - m_ConditionMode: 2
    m_ConditionEvent: is_change_turn
    m_EventTreshold: 0
    m_ExitTime: .750000238
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110170674
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110245500}
  m_DstState: {fileID: 110295718}
  m_TransitionDuration: .113156326
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent: is_straight
    m_EventTreshold: 0
    m_ExitTime: .810000002
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110190168
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 110245500}
  m_TransitionDuration: .100000001
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_lose
    m_EventTreshold: 0
    m_ExitTime: .899999976
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &110192680
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: 
  m_SrcState: {fileID: 110251152}
  m_DstState: {fileID: 110239848}
  m_TransitionDuration: .189873293
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: is_right
    m_EventTreshold: 0
    m_ExitTime: .810126722
  - m_ConditionMode: 2
    m_ConditionEvent: is_change_turn
    m_EventTreshold: 0
    m_ExitTime: .810126722
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &110210760
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQ_get
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 30661bcbb2ee94ebeb2bb051d7a93784, type: 3}
  m_ParentStateMachine: {fileID: 110724626}
  m_Position: {x: 300, y: -264, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110230258
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQ_fly_left
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400014, guid: 30661bcbb2ee94ebeb2bb051d7a93784, type: 3}
  m_ParentStateMachine: {fileID: 110724626}
  m_Position: {x: 528, y: -408, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110231758
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQ_run
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400004, guid: 409b7abc7536b954da4dca307ba36cf4, type: 3}
  m_ParentStateMachine: {fileID: 110724626}
  m_Position: {x: 288, y: -408, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110239848
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQ_fly_right
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400016, guid: 30661bcbb2ee94ebeb2bb051d7a93784, type: 3}
  m_ParentStateMachine: {fileID: 110724626}
  m_Position: {x: 600, y: -300, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110245170
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQ_return_back
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400020, guid: 30661bcbb2ee94ebeb2bb051d7a93784, type: 3}
  m_ParentStateMachine: {fileID: 110724626}
  m_Position: {x: 432, y: -168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110245500
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQ_lose
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400006, guid: 30661bcbb2ee94ebeb2bb051d7a93784, type: 3}
  m_ParentStateMachine: {fileID: 110724626}
  m_Position: {x: 348, y: -84, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110251152
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQ_fly_idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400010, guid: 30661bcbb2ee94ebeb2bb051d7a93784, type: 3}
  m_ParentStateMachine: {fileID: 110724626}
  m_Position: {x: 288, y: -468, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110265300
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQ_change_turn
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400018, guid: 30661bcbb2ee94ebeb2bb051d7a93784, type: 3}
  m_ParentStateMachine: {fileID: 110724626}
  m_Position: {x: 552, y: -84, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110267686
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQ_fly_idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400016, guid: 409b7abc7536b954da4dca307ba36cf4, type: 3}
  m_ParentStateMachine: {fileID: 110724626}
  m_Position: {x: 36, y: -144, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110295554
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQ_win
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400008, guid: 30661bcbb2ee94ebeb2bb051d7a93784, type: 3}
  m_ParentStateMachine: {fileID: 110724626}
  m_Position: {x: 96, y: -168, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1102 &110295718
State:
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: PQ_fly_straight
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400012, guid: 30661bcbb2ee94ebeb2bb051d7a93784, type: 3}
  m_ParentStateMachine: {fileID: 110724626}
  m_Position: {x: 288, y: -372, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: 
--- !u!1107 &110724626
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 3
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 110251152}
  m_States:
  - {fileID: 110251152}
  - {fileID: 110295718}
  - {fileID: 110230258}
  - {fileID: 110239848}
  - {fileID: 110210760}
  - {fileID: 110295554}
  - {fileID: 110245500}
  - {fileID: 110245170}
  - {fileID: 110265300}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
    data:
      first: {fileID: 0}
      second:
      - {fileID: 110106380}
      - {fileID: 110119916}
      - {fileID: 110144416}
      - {fileID: 110190168}
      - {fileID: 110158562}
    data:
      first: {fileID: 110210760}
      second:
      - {fileID: 110142448}
    data:
      first: {fileID: 110230258}
      second:
      - {fileID: 110114124}
      - {fileID: 110167360}
    data:
      first: {fileID: 110239848}
      second:
      - {fileID: 110144916}
      - {fileID: 110109882}
    data:
      first: {fileID: 110245170}
      second:
      - {fileID: 110132550}
    data:
      first: {fileID: 110245500}
      second:
      - {fileID: 110170674}
    data:
      first: {fileID: 110251152}
      second:
      - {fileID: 110156168}
      - {fileID: 110136466}
      - {fileID: 110192680}
    data:
      first: {fileID: 110265300}
      second:
      - {fileID: 110144842}
    data:
      first: {fileID: 110295554}
      second:
      - {fileID: 110133794}
    data:
      first: {fileID: 110295718}
      second:
      - {fileID: 110118080}
      - {fileID: 110137576}
      - {fileID: 110169876}
  m_MotionSetCount: 1
  m_AnyStatePosition: {x: 120, y: -264, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
